--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "modal-form",
   "version": "0.2.1",
   "devDependencies": {
+    "es6-promise": "~3.0.2",
+    "mocha": "~2.3.2",
     "object-assign": "~4.0.1",
+    "phantomjs": "~1.9.18",
     "react": "~0.13.3",
     "simulant": "~0.1.5",
-    "tape": "~4.0.2",
+    "sinon": "~1.16.1",
     "zuul": "~3.2.0"
   },
   "scripts": {
-    "sauce": "zuul ./test/index.js",
-    "test": "zuul --local 7357 ./test/index.js"
+    "test": "zuul --phantom -- ./test/*.js",
+    "test-with-sauce": "zuul -- ./test/*.js",
+    "serve-tests": "zuul --local 7357 -- ./test/*.js"
   }
 }
