--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "es6-promise": "~3.0.2",
+    "history-events": "~1.0.4",
     "mocha": "~2.3.2",
     "object-assign": "~4.0.1",
     "phantomjs": "~1.9.18",
