--- a/.zuul.yml
+++ b/.zuul.yml
@@ -1,10 +1,10 @@
 ui: mocha-bdd
 browsers:
   - name: chrome
-    version: latest
+    version: -1..latest
   - name: firefox
-    version: latest
+    version: -1..latest
   - name: ie
-    version: latest
+    version: -1..latest
   - name: iphone
-    version: latest
+    version: -1..latest
