--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "modal-form",
   "version": "1.1.0",
   "devDependencies": {
+    "custom-event": "~1.0.0",
     "es6-promise": "~3.0.2",
     "mocha": "~2.3.2",
     "object-assign": "~4.0.1",
