--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "mocha": "~2.3.2",
     "object-assign": "~4.0.1",
     "phantomjs": "~1.9.18",
-    "react": "~0.13.3",
+    "react": "~0.14.1",
+    "react-dom": "~0.14.3",
     "simulant": "~0.1.5",
     "sinon": "~1.16.1",
     "zuul": "~3.5.0"
