--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "modal-form",
   "version": "2.3.0",
   "devDependencies": {
+    "babel-core": "~5.8.38",
     "custom-event": "~1.0.0",
     "es6-promise": "~3.0.2",
     "mocha": "~2.3.2",
