--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "2.3.1",
   "devDependencies": {
     "babel-core": "~5.8.38",
+    "core-js": "~2.4.0",
     "custom-event": "~1.0.0",
-    "es6-promise": "~3.0.2",
     "mocha": "~2.3.2",
-    "object-assign": "~4.0.1",
     "phantomjs": "~1.9.18",
     "react": "~0.14.1",
     "react-dom": "~0.14.3",
