Get tests working

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "zuul": "~3.5.0"
   },
   "scripts": {
-    "test": "zuul -- ./test/*.js",
-    "test-with-phantom": "zuul --phantom -- ./test/*.js",
+    "test": "zuul --phantom -- ./test/*.js",
     "serve-tests": "zuul --local 7357 -- ./test/*.js"
   }
 }
