--- a/package.json
+++ b/package.json
@@ -3,15 +3,8 @@
   "version": "2.8.0",
   "devDependencies": {
     "babel-core": "~5.8.38",
-    "core-js": "~2.4.0",
-    "custom-event": "~1.0.0",
-    "mocha": "~2.3.2",
-    "phantomjs": "~1.9.18",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "simulant": "~0.1.5",
-    "sinon": "~1.16.1",
-    "zuul": "~3.5.0"
+    "react-dom": "^16.5.0"
   },
   "scripts": {
     "test": "zuul --phantom -- ./test/*.js",
