--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0"
   },
+  "peerDependencies": {
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0"
+  },
   "scripts": {
   },
   "dependencies": {
