--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modal-form",
-  "version": "2.8.0",
+  "version": "2.9.0",
   "devDependencies": {
     "babel-core": "~5.8.38",
     "react": "^16.5.0",
@@ -10,8 +10,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
     "create-react-class": "^15.6.3",
     "prop-types": "^15.6.2"
