--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "modal-form",
   "version": "2.9.0",
-  "devDependencies": {
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0"
-  },
+  "devDependencies": {},
   "peerDependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
