Remove babel-core, react and react-dom (#48)
* Remove babel-core
Remove babel-core. Use the unpkg.com CDN to load babel for the examples instead.

* Uninstall react and react react-dom
Load react and react-dom from unpkg.com for the examples.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "modal-form",
   "version": "2.9.0",
-  "devDependencies": {
-    "babel-core": "~5.8.38",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0"
-  },
+  "devDependencies": {},
   "peerDependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
